2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php, include/api.php, godmode/setup/setup.php:
	added the check by password the actions on API.
	
	Pending tasks: #3180793

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed the include of extensions, mysql or
	postgresql for the api call or Pandora Mobile.

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php: fixed in function "postgresql_insert_id" the
	lost var. Erased traces in the function "postgresql_process_sql". Added
	function "postgresql_escape_string_sql".
	
	* include/db/mysql.php: fixed duplicated function "mysql_process_sql". And
	added function "mysql_escape_string_sql".
	
	* include/auth/mysql.php: added method to autenticate with postgreSQL.
	
	* include/functions_db.php: added functions "select_db_engine",
	"connect_db". And divided the function "escape_string_sql" into avaliable
	engines.

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php,
	include/functions_db.php: initial division of the DB core in several
	engines, at the moment mysql and postgreSQL (not complete).
	
	* include/functions_config.php, include/config_process.php: change source
	code to use new functions.
	
	* install.php: mark the mysql engine (in future select).

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb.postgreSQL.sql: added "block_size" and "flash_chart" columns on
	tusuario table.

2011-02-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* pandoradb.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added "block_size" and 
	"flash_chart" columns on tusuario table.

2011-02-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php: Loads relative_path variable in user 
	session.
	* include/functions_db.php: Added include call to 
	functions_extensions.php.
	* godmode/groups/configure_group.php 